--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/b">create a site</a></section><section once="" class="cid-qV9SnF7Y8H" id="footer6-1">
+<section class="engine"><a href="https://mobirise.me/k">how to develop your own website</a></section><section once="" class="cid-qV9SnF7Y8H" id="footer6-1">
 
     
 
@@ -105,7 +105,7 @@
     <div class="form-container">
         <div class="media-container-column" data-form-type="formoid">
             <div data-form-alert="" hidden="" class="align-center">Vielen Dank! Ihre Nachricht wurde verschickt!</div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UgM+8HSslD9HpZXfFdEsdRLeS3IDbJT2I5bsHAOj/wz7qIdBilG6Cjws40urMJ5M/5+FHs4+L9SzzwHoo6ZbKrDD8Icdwi5emSb8DrBR4Rd7WaHjxMRBKaIQ4dyu2hpp" data-form-field="Email">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6oIxCl/6s/TUpaNR6VZKV5Ci45tffvfVzHiXk+h/4MZrTLHgBDuEva5EqSHVXoQ2E/Z44oXm8C+fn1QO2kfI3JeJosd9sMgGSfoHvDQKDqsWFf3specQmgF1UuUoVDeV" data-form-field="Email">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-5">
@@ -162,7 +162,7 @@
             
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white align-center display-7">
-                    © Copyright 2017 bastian.o- Alle Rechte vorbehalten
+                    © Copyright 2018 bastian.o- Alle Rechte vorbehalten<br>
                 </p>
             </div>
         </div>
